- Fix some responsive issues - Fix Psi logo in Roster - Hide more stuff on mobile

--- a/app/widgets/Notification/notification.css
+++ b/app/widgets/Notification/notification.css
@@ -3,16 +3,22 @@
     bottom: 0px;
     left: 0px;
     z-index: 5;
+    max-width: 100%;
+    
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+
+    padding: 1em;
 
     pointer-events: none;
 }
 
 #notification_widget .notif {
     background-color: rgba(0, 0, 0, 0.8);
-    width: 20em;
-    max-width: 100%;
-    margin: 1em;
-    margin-top: 0em;
+    margin-top: 1em;
+    width: 100%;
+    
     color: white;
     padding: 0.7em;
     padding-left: 3em;
